[workspace]
resolver = "2"

members = [
    "arc_queue_pool",
    "arc_slice_pool",
    "breadcrumb_channel",
    "stable_queue",
]

[workspace.dependencies]
arc_queue_pool = { path = "arc_queue_pool", version = "0.1.0" }
arc_slice_pool = { path = "arc_slice_pool", version = "0.2.0" }
breadcrumb_channel = { path = "breadcrumb_channel", version = "0.1.0" }
stable_queue = { path = "stable_queue", version = "0.1.0" }

bitvec = "1.0.1"
consume_on_drop = "0.1.1"
derive-where = "1.2.7"
parking_lot = "0.12.3"
tokio = "1.39.3"
