[package]
name = "breadcrumb_channel"
version = "0.1.0"
edition = "2021"
description = "Unbounded broadcast channel with clone-on-receive semantics"
license = "MIT"
repository = "https://github.com/davidspies/arcpool"

[dependencies]
consume_on_drop.workspace = true
derive-where.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["sync"] }

arc_queue_pool.workspace = true
arc_slice_pool.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
